@@ -1,3 +1,14 @@
+2008-04-25  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* libavogadro/src/primitiveitemmodel.cpp: Added in layout change
+	signals. Will hopefully prevent crashing. 
+
+	* avogadro/src/mainwindow.ui: Move export to a new submenu of
+	File.
+
+	* avogadro/src/mainwindow.*: Add drag-and-drop support. Files
+	dragged onto a window will be loaded.
+
 2008-04-25  Marcus D. Hanwell  <marcus@cryos.org>
 
 	* libavogadro/src/extensions/basisset.*,
